--- a/.gitignore
+++ b/.gitignore
@@ -574,3 +574,4 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,go,visualstudio,macos,windows
 papaya_image/
+Datasets/
